Mock vehicle did-data
